[metadata]
name = fragments
version = 1.0.0
author = Nima Akbarzadeh
author_email = iw4p@protonmail.com
description = UnOfficial Fragment (Telegram - Ton Coin) Python library
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://gitlab.com/iw4p/fragments
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    beautifulsoup4


[options.packages.find]
where = src
